[package]
name = "rust-echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.17.1", features = ["wgpu", "ndarray"] }
cpal = "0.15"
dasp = { version = "0.11.0", features = [ "signal", "ring_buffer", "interpolate", "interpolate-floor" ] }
mel_spec = "0.3.3"
symphonia = { version="0.5.4", features = ["mp3"] }
